--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon dist/server.js"
+    "start": "nodemon dist/server.js",
+    "dev": "nodemon dist/server.js",
+    "start:prod": "set NODE_ENV=production&& nodemon dist/server.js"
   },
   "keywords": [],
   "author": "",
