--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.17",
     "@types/mongoose": "^5.11.97",
+    "@types/morgan": "^1.9.5",
     "@types/node": "^20.5.9",
     "@types/validator": "^13.11.1",
     "bcrypt": "^5.1.1",
@@ -23,12 +24,14 @@
     "express": "^4.18.2",
     "express-rate-limit": "^6.10.0",
     "jsonwebtoken": "^9.0.2",
+    "nodemailer": "^6.9.5",
     "nodemon": "^3.0.1",
     "validator": "^13.11.0",
     "xss-clean": "^0.1.4"
   },
   "devDependencies": {
     "@types/jsonwebtoken": "^9.0.2",
+    "@types/nodemailer": "^6.4.10",
     "eslint": "^8.48.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^9.0.0",
