--- a/SERVER/package.json
+++ b/SERVER/package.json
@@ -25,6 +25,7 @@
     "jsonwebtoken": "^9.0.2",
     "nodemailer": "^6.9.5",
     "nodemon": "^3.0.1",
+    "socket.io": "^4.7.2",
     "ts-node": "^10.9.1",
     "validator": "^13.11.0",
     "xss-clean": "^0.1.4"
