--- a/SERVER/package.json
+++ b/SERVER/package.json
@@ -5,7 +5,7 @@
   "main": "index.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "ts-node src/server.ts",
+    "dev": "ts-node dist/server.js",
     "start:prod": "set NODE_ENV=production&& node dist/server.js"
   },
   "keywords": [],
@@ -19,6 +19,7 @@
     "@types/node": "^20.5.9",
     "@types/validator": "^13.11.1",
     "bcrypt": "^5.1.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-rate-limit": "^6.10.0",
