--- a/SERVER/package.json
+++ b/SERVER/package.json
@@ -5,7 +5,7 @@
   "main": "index.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "ts-node dist/server.js",
+    "dev": "nodemon dist/server.js",
     "start:prod": "set NODE_ENV=production&& node dist/server.js"
   },
   "keywords": [],
