--- a/SERVER/package.json
+++ b/SERVER/package.json
@@ -13,11 +13,13 @@
   "license": "ISC",
   "dependencies": {
     "@types/bcrypt": "^5.0.0",
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.17",
     "@types/mongoose": "^5.11.97",
     "@types/morgan": "^1.9.5",
     "@types/node": "^20.5.9",
     "@types/validator": "^13.11.1",
+    "@types/ws": "^8.5.10",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
@@ -26,9 +28,9 @@
     "jsonwebtoken": "^9.0.2",
     "nodemailer": "^6.9.5",
     "nodemon": "^3.0.1",
-    "socket.io": "^4.7.2",
     "ts-node": "^10.9.1",
     "validator": "^13.11.0",
+    "ws": "^8.16.0",
     "xss-clean": "^0.1.4"
   },
   "devDependencies": {
